WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
167512
Fix diagnostic logging under loader/
https://bugs.webkit.org/show_bug.cgi?id=167512
Summary
Fix diagnostic logging under loader/
Chris Dumez
Reported
2017-01-27 10:14:50 PST
Fix diagnostic logging under loader/. We should not be using logDiagnosticLoggingWithValue() without a numeric value.
Attachments
Patch
(12.31 KB, patch)
2017-01-27 10:16 PST
,
Chris Dumez
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Chris Dumez
Comment 1
2017-01-27 10:16:44 PST
Created
attachment 299941
[details]
Patch
Alex Christensen
Comment 2
2017-01-27 12:01:50 PST
Comment on
attachment 299941
[details]
Patch Seriously, make logDiagnosticMessageWithValue take a double
Chris Dumez
Comment 3
2017-01-27 12:11:14 PST
(In reply to
comment #2
)
> Comment on
attachment 299941
[details]
> Patch > > Seriously, make logDiagnosticMessageWithValue take a double
Yes. I am *first* fixing all the call sites that do not pass a number, *then* I'll fix the API.
Chris Dumez
Comment 4
2017-01-27 13:09:17 PST
Comment on
attachment 299941
[details]
Patch Clearing flags on attachment: 299941 Committed
r211301
: <
http://trac.webkit.org/changeset/211301
>
Chris Dumez
Comment 5
2017-01-27 13:09:21 PST
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug