Fix diagnostic logging under loader/ https://bugs.webkit.org/show_bug.cgi?id=167512

Reviewed by Alex Christensen.

Fix diagnostic logging under loader/. We should not be using logDiagnosticLoggingWithValue()
without a numeric value.

* loader/ResourceLoader.cpp:
(WebCore::logResourceResponseSource):
* loader/SubresourceLoader.cpp:
(WebCore::logResourceLoaded):
* loader/cache/CachedResourceLoader.cpp:
(WebCore::logMemoryCacheResourceRequest):
(WebCore::CachedResourceLoader::requestResource):
(WebCore::logRevalidation):
* page/DiagnosticLoggingKeys.cpp:
(WebCore::DiagnosticLoggingKeys::memoryCacheEntryDecisionKey):
(WebCore::DiagnosticLoggingKeys::memoryCacheUsageKey):
(WebCore::DiagnosticLoggingKeys::cachedResourceRevalidationReasonKey):
(WebCore::DiagnosticLoggingKeys::resourceLoadedKey):
(WebCore::DiagnosticLoggingKeys::resourceResponseSourceKey):
* page/DiagnosticLoggingKeys.h:

Canonical link: https://commits.webkit.org/184550@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@211301 268f45cc-cd09-0410-ab3c-d52691b4dbfc